# snakemake-cli-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/doc/: README.md
{{cookiecutter.project_name}}/src/{{cookiecutter.import_name}}/: __about__.py  __init__.py  __main__.py  snk.yaml
{{cookiecutter.project_name}}/src/{{cookiecutter.import_name}}/cli/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.import_name}}/scripts/: README.md
{{cookiecutter.project_name}}/src/{{cookiecutter.import_name}}/workflow/: Snakefile
