[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "{{cookiecutter.package_name}}"
version = "{{ cookiecutter.first_version }}"
description = "{{ cookiecutter.project_short_description | replace('\\', '\\\\') | replace('\"', '\\\"') }}"
readme = "README.md"
authors = [
  { name = "{{ cookiecutter.full_name | replace('\\', '\\\\') | replace('\"', '\\\"') }}", email = "{{cookiecutter.email}}" },
]
maintainers = [
  { name = "{{ cookiecutter.full_name | replace('\\', '\\\\') | replace('\"', '\\\"') }}", email = "{{cookiecutter.email}}" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]
license = { text = "MIT" }
dependencies = ["typer", "rich"]
requires-python = ">= 3.12"

[project.urls]
bugs = "https://github.com/{{cookiecutter.github_repo_owner}}/{{cookiecutter.package_name}}/issues"
changelog = "https://github.com/{{cookiecutter.github_repo_owner}}/{{cookiecutter.package_name}}/releases"
documentation = "https://{{ cookiecutter.github_repo_owner }}.github.io/{{ cookiecutter.package_name }}/"
homepage = "https://github.com/{{cookiecutter.github_repo_owner}}/{{cookiecutter.package_name}}"

[project.scripts]
{{cookiecutter.import_name}} = "{{cookiecutter.import_name}}.cli:{{cookiecutter.import_name}}"

[tool.pixi.workspace]
channels = [
  "https://prefix.dev/pixi-build-backends",
  "https://prefix.dev/conda-forge",
  "bioconda",
]
platforms = ["linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]
version = "{{cookiecutter.first_version}}"

[dependency-groups]
test = ["pytest"]

[tool.pixi.dependencies]
snk-cli = "*"
snakemake = ">=9"
python = "*"
polars = "*"
snakemake-executor-plugin-slurm = "*"
tqdm = "*"
graphviz = "*"
conda = "*"
pixi-inject = "*"
marimo = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
env = { cmd = "pixi reinstall --locked -e default" }
build = { cmd = "pixi publish --target-dir .pixi/publish --force --clean --path pyproject.toml", depends-on = [
  "env",
] }
install = { cmd = "pixi exec rattler inject-into-prefix -p $CONDA_PREFIX .pixi/publish/{{cookiecutter.import_name}}-*.conda", depends-on = [
  "build",
] }

[tool.pixi.feature.test.tasks]
env_test = { cmd = "pixi reinstall --locked -e test" }
build_test = { cmd = "pixi publish --target-dir .pixi/publish --force --clean --path pyproject.toml", depends-on = [
  "env_test",
] }
install_test = { cmd = "pixi exec rattler inject-into-prefix -p $CONDA_PREFIX .pixi/publish/{{cookiecutter.import_name}}-*.conda", depends-on = [
  "build_test",
] }
test = { cmd = "pytest tests/test_{{cookiecutter.import_name}}.py", depends-on = [
  "install_test",
] }

[tool.pixi.package]
name = "{{cookiecutter.import_name}}"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.*" }

[tool.pixi.package.host-dependencies]
hatchling = "*"


[tool.pixi.package.run-dependencies]
snk-cli = "*"
snakemake = ">=9"
python = "*"
polars = "*"
snakemake-executor-plugin-slurm = "*"
tqdm = "*"
graphviz = "*"
conda = "*"
marimo = "*"
